# pmd-pinch-test-mc

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  start-pinch-docker.bat  start-pinch.bat  stop-pinch.bat
backend/: alembic.ini  config.example.yaml  kvm.txt  plc_bridge.py  pyproject.toml  run_backend.py
backend/app/: config.py  deps.py  logging_setup.py  main.py
backend/app/api/: comparisons.py  config.py  hardware.py  recipes.py  runs.py  sessions.py  settings.py  system.py  ws.py
backend/app/db/: engine.py  models.py
backend/app/hardware/: base.py  esp32.py  imada.py  manager.py  plc.py
backend/app/schemas/: comparison.py  hardware.py  recipe.py  run.py  session.py  system.py  ws_messages.py
backend/app/services/: comparison_service.py  event_bus.py  recipe_service.py  state_machine.py  system_service.py  test_runner.py  waveform.py  ws_hub.py
backend/scripts/: README.md  benchmark_plc_usb.py  bridge_minimal.py  check_mr807.py  plc_minimal.py  read_all_bits.py  smoke_test_esp32.py  smoke_test_imada.py  smoke_test_plc.py
backend/tests/integration/: test_comparisons_api.py  test_hardware_api.py  test_plc_bit_api.py  test_recipes_api.py  test_runner_e2e_mock.py  test_runs_api.py  test_sessions_api.py  test_settings_api.py  test_system_api.py  test_ws.py
backend/tests/unit/: test_comparison_service.py  test_config.py  test_event_bus.py  test_hardware_base.py  test_hardware_manager.py  test_logging.py  test_mock_esp32.py  test_mock_imada.py  test_mock_plc.py  test_models.py  test_recipe_service.py  test_state_machine.py  test_system_service.py  (+2 more)
(+123 files in other folders)
